syntax = "proto3";

package myservice;

// Define the service with 3 functions
service MyService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc AddNumbers (AddRequest) returns (AddResponse);
  rpc GetUser (UserRequest) returns (UserResponse);
}

// Messages
message HelloRequest {
  string name = 1;
}
message HelloResponse {
  string message = 1;
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}
message AddResponse {
  int32 sum = 1;
}

message UserRequest {
  int32 id = 1;
}
message UserResponse {
  int32 id = 1;
  string name = 2;
}
